--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,14 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.1"
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.10.1",
+    "serverless-http": "^3.2.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "serverless-offline": "^14.4.0"
   },
   "keywords": [],
   "author": "",
