--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,4 +4,5 @@ REACT_APP_FIREBASE_PROJECT_ID=your-project-id
 REACT_APP_FIREBASE_STORAGE_BUCKET=your-storage-bucket
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your-messaging-sender-id
 REACT_APP_FIREBASE_APP_ID=your-app-id
-REACT_APP_API_URL=<BackendUrl from CDK output> 
+REACT_APP_API_URL=<BackendUrl from CDK output>
+DANGEROUSLY_DISABLE_HOST_CHECK=true 
