--- a/backend/package.json
+++ b/backend/package.json
@@ -1,29 +1,21 @@
 {
-  "name": "marketplace-backend",
+  "name": "secondchance-backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "",
+  "main": "lambda.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "serverless offline start"
   },
   "dependencies": {
-    "aws-sdk": "^2.1692.0",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.15.0",
-    "mongoose": "^8.10.1",
-    "serverless-http": "^3.2.0",
-    "sqlite3": "^5.1.7"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
-    "nodemon": "^2.0.14",
-    "serverless-offline": "^14.4.0"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "serverless": "^3.38.0",
+    "serverless-http": "^3.2.0",
+    "serverless-offline": "^13.3.3"
+  }
 }
