--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -6,31 +6,6 @@ provider:
   stage: dev
   region: us-east-1
 
-functions:
-  api:
-    handler: lambda.handler
-    events:
-      - http:
-          path: /api/auth/login
-          method: post
-          cors: true
-      - http:
-          path: /api/users/items
-          method: get
-          cors: true
-      - http:
-          path: /api/users/profile
-          method: put
-          cors: true
-      - http:
-          path: /api/items
-          method: get
-          cors: true
-      - http:
-          path: /api/items/{id}
-          method: get
-          cors: true
-
 plugins:
   - serverless-offline
 
@@ -38,4 +13,61 @@ custom:
   serverless-offline:
     httpPort: 5001
     host: localhost
-    noPrependStageInUrl: true 
+    websocket: true
+    noPrependStageInUrl: true
+    corsConfig:
+      origin: '*'
+      headers:
+        - Content-Type
+        - Authorization
+        - X-Amz-Date
+        - X-Api-Key
+        - X-Amz-Security-Token
+        - X-Amz-User-Agent
+      credentials: true
+
+functions:
+  api:
+    handler: lambda.handler
+    events:
+      - http:
+          path: /api/{proxy+}
+          method: ANY
+          cors: true
+      - http:
+          path: /api/auth/login
+          method: POST
+          cors: true
+      - http:
+          path: /api/auth/register
+          method: POST
+          cors: true
+      - http:
+          path: /api/users/profile
+          method: GET
+          cors: true
+      - http:
+          path: /api/users/items
+          method: GET
+          cors: true
+      - http:
+          path: /api/users/purchases
+          method: GET
+          cors: true
+      - http:
+          path: /api/items
+          method: GET
+          cors: true
+      - http:
+          path: /api/items/{id}
+          method: GET
+          cors: true
+      - http:
+          path: /api/items
+          method: POST
+          cors: true
+      - http:
+          path: /api/items/{id}/purchase
+          method: POST
+          cors: true
+      # Add other routes as needed 
