--- a/backend/package.json
+++ b/backend/package.json
@@ -7,14 +7,16 @@
     "start": "serverless offline start"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "serverless": "^3.38.0",
+    "serverless-dotenv-plugin": "^6.0.0",
     "serverless-http": "^3.2.0",
     "serverless-offline": "^13.3.3"
   }
